--- a/view/about/about.html
+++ b/view/about/about.html
@@ -55,14 +55,17 @@
 
   <div class="footer">
     <div class="socialicons">
-      <a href="#" class="fa fa-instagram"></a>
-      <a href="#" class="fa fa-facebook"></a>
-      <a href="#" class="fa fa-telegram"></a>
-      <a href="#" class="fa fa-twitter"></a>
-      <a href="#" class="fa fa-whatsapp"></a>
+      <a href="https://instagram.com/zuxmoney_beauty_parlor?igshid=NDk5N2NlZjQ=" class="fa fa-instagram"></a>
+      <a href="#" class="fa fa-facebook" target="_blank"></a>
+      <a href="#" class="fa fa-telegram" target="_blank"></a>
+      <a href="#" class="fa fa-twitter" target="_blank"></a>
+      <a href="#" class="fa fa-whatsapp" target="_blank"></a>
       <div class="tik">
-        <a href="#"><img src="../../src/images/tkicon4.png" alt="tiktok"></a>
+        <a href="https://www.tiktok.com/@zuxmoney_beauty_parlor?_t=8Zi3K9t6EHF&_r=1" target="_blank"><img
+            src="../../src/images/tkicon4.png" alt="tiktok"></a>
       </div>
+
+
     </div>
 
 
@@ -82,7 +85,7 @@
 
       <div class="column3">
         <h3>Contacts</h3>
-        <p>Phone:&nbsp; &nbsp; &nbsp;&nbsp; +255764730547<br>Email:&nbsp; &nbsp; &nbsp;&nbsp; zux@gmail.com
+        <p>Phone:&nbsp; &nbsp; &nbsp;&nbsp; +255752103394<br>Email:&nbsp; &nbsp; &nbsp;&nbsp; zux@gmail.com
         <p>
       </div>
     </div>
