--- a/view/gallerypage/gallerypage.html
+++ b/view/gallerypage/gallerypage.html
@@ -33,30 +33,30 @@
   <div class="column">
     <img src="../../src/images/pic2.jpg" style="width:95%">
       <img src="../../src/images/pic3.jpg" style="width:95%">
-      <img src="../../src/images/pic2.jpg"  style="width:95%">
-      <img src="../../src/images/pic2.jpg" style="width:95%">
-      <img src="../../src/images/pic2.jpg"  style="width:95%">
+      <img src="../../src/images/pic9.jpg"  style="width:95%">
+      <img src="../../src/images/pic10.jpg" style="width:95%">
+      <img src="../../src/images/pic11.jpg"  style="width:95%">
   </div>
   <div class="column">
-    <img src="../../src/images/pic2.jpg" style="width:95%">
-      <img src="../../src/images/pic3.jpg" style="width:95%">
-      <img src="../../src/images/pic2.jpg"  style="width:95%">
-      <img src="../../src/images/pic2.jpg" style="width:95%">
-      <img src="../../src/images/pic2.jpg"  style="width:95%">
+    <img src="../../src/images/pic12.jpg" style="width:95%">
+      <img src="../../src/images/pic13.jpg" style="width:95%">
+      <img src="../../src/images/pic14.jpg"  style="width:95%">
+      <img src="../../src/images/pic15.jpg" style="width:95%">
+      <img src="../../src/images/pic16.jpg"  style="width:95%">
   </div>  
   <div class="column">
-    <img src="../../src/images/pic2.jpg" style="width:95%">
-      <img src="../../src/images/pic3.jpg" style="width:95%">
-      <img src="../../src/images/pic2.jpg"  style="width:95%">
-      <img src="../../src/images/pic2.jpg" style="width:95%">
-      <img src="../../src/images/pic2.jpg"  style="width:95%">
+    <img src="../../src/images/pic17.jpg" style="width:95%">
+      <img src="../../src/images/pic18.jpg" style="width:95%">
+      <img src="../../src/images/pic19.jpg"  style="width:95%">
+      <img src="../../src/images/pic20.jpg" style="width:95%">
+      <img src="../../src/images/pic21.jpg"  style="width:95%">
   </div>
   <div class="column">
-    <img src="../../src/images/pic2.jpg" style="width:95%">
-      <img src="../../src/images/pic3.jpg" style="width:95%">
-      <img src="../../src/images/pic2.jpg"  style="width:95%">
-      <img src="../../src/images/pic2.jpg" style="width:95%">
-      <img src="../../src/images/pic2.jpg"  style="width:95%">
+    <img src="../../src/images/pic22.jpg" style="width:95%">
+      <img src="../../src/images/pic23.jpg" style="width:95%">
+      <img src="../../src/images/pic24.jpg"  style="width:95%">
+      <img src="../../src/images/pic25.jpg" style="width:95%">
+      <img src="../../src/images/pic26.jpg"  style="width:95%">
   </div>
 </div>
 
@@ -66,14 +66,14 @@
 
   <div class="footer">
     <div class="socialicons">
-      <a href="#" class="fa fa-instagram"></a>
-      <a href="#" class="fa fa-facebook"></a>
-      <a href="#" class="fa fa-telegram"></a>
-      <a href="#" class="fa fa-twitter"></a>
-      <a href="#" class="fa fa-whatsapp"></a>
+      <a href="https://instagram.com/zuxmoney_beauty_parlor?igshid=NDk5N2NlZjQ=" class="fa fa-instagram"></a>
+      <a href="#" class="fa fa-facebook" target="_blank"></a>
+      <a href="#" class="fa fa-telegram" target="_blank"></a>
+      <a href="#" class="fa fa-twitter" target="_blank"></a>
+      <a href="#" class="fa fa-whatsapp" target="_blank"></a>
       <div class="tik">
-        <a href="#"><img src="../../src/images/tkicon4.png" alt="tiktok"></a>
-    </div>
+          <a href="https://www.tiktok.com/@zuxmoney_beauty_parlor?_t=8Zi3K9t6EHF&_r=1" target="_blank"><img src="../../src/images/tkicon4.png" alt="tiktok" ></a>
+      </div>
     </div>
 
 
@@ -93,7 +93,7 @@
 
       <div class="column3">
         <h3>Contacts</h3>
-        <p>Phone:&nbsp; &nbsp; &nbsp;&nbsp; +255764730547<br>Email:&nbsp; &nbsp; &nbsp;&nbsp; zux@gmail.com
+        <p>Phone:&nbsp; &nbsp; &nbsp;&nbsp;+255752103394<br>Email:&nbsp; &nbsp; &nbsp;&nbsp; zux@gmail.com
         </p>
       </div>
     </div>
