--- a/view/homepage/home.html
+++ b/view/homepage/home.html
@@ -39,12 +39,14 @@
             <div class="servicesgallery">
 
                 <div class="servigallery1 ">
-                    <a target="_blank" href="../../src/images/pic4.jpg">
-                        <img src="../../src/images/pic4.jpg" alt="Cinque Terre" width="600" height="400">
+                    <a target="_blank" href="../../src/images/hairdress1.jpg">
+                        <img src="../../src/images/hairdress1.jpg" alt="Cinque Terre" width="600" height="400">
                     </a>
                     <p>HAIR <span>DRESSING</span></p>
-                    <div class="desc">Add a description of the image here, Add a description of the image hereAdd a
-                        description of the image here</div>
+                    <div class="desc">Welcome to our Hair Dressing Salon!
+                         Our experienced stylists offer a wide range of hair services to help you look and feel your best.
+                         We use only the highest quality products to ensure your hair is healthy and vibrant. 
+                         Book an appointment today and let us help you achieve the hair of your dreams!</div>
                 </div>
 
                 <div class="hr">
@@ -53,12 +55,11 @@
 
 
                 <div class="servigallery2 ">
-                    <a target="_blank" href="../../src/images/pic2.jpg">
-                        <img src="../../src/images/pic2.jpg" alt="Forest" width="600" height="400">
+                    <a target="_blank" href="../../src/images/makeup1.jpg">
+                        <img src="../../src/images/makeup1.jpg" alt="Forest" width="600" height="465">
                     </a>
                     <p>MAKE<span>UP</span></p>
-                    <div class="desc">Add a description of the image hereAdd a description of the image here, Add a
-                        description of the image here</div>
+                    <div class="desc">Our skilled makeup artists use the latest products and techniques to enhance your natural beauty.  From foundation to eye shadow, lips to cheeks, we'll help you bring out your best features and leave you feeling confident and beautiful. Book an appointment today and get ready to shine!"</div>
                 </div>
 
                 <div class="hr">
@@ -69,9 +70,8 @@
                     <a target="_blank" href="../../src/images/pic3.jpg">
                         <img src="../../src/images/pic3.jpg" alt="Northern Lights" width="600" height="400">
                     </a>
-                    <p><span>DISCOUNT</span> ON SERVICES</p>
-                    <div class="desc">Add a description of the image here, Add a description of the image hereAdd a
-                        description of the image here</div>
+                    <p><span>NAILS</span> AND  DECORATIONS</p>
+                    <div class="desc">Our expert technicians will help you achieve stunning, personalized nails that are as unique as you are.  Choose from a variety of colors, patterns, and decorations to make your nails pop. Book an appointment today and let us help you make a statement with your nails!</div>
                 </div>
                 <div class="hr">
                     <hr>
@@ -101,8 +101,9 @@
                         <img src="../../src/images/pic4.jpg" alt="Cinque Terre" width="600" height="400">
                     </a>
                     <p>FREE <span>Wi-Fi</span></p>
-                    <div class="desc">Add a description of the image here, Add a description of the image hereAdd a
-                        description of the image here</div>
+                    <div class="desc">Stay connected while you relax and rejuvenate at our salon. We offer Free Wi-Fi to all of our customers, so you can catch up on work, browse the web, or simply stay connected with friends and family.
+                        Enjoy fast and reliable Wi-Fi while you wait.Book your appointment today and take advantage of our convenient and complimentary Wi-Fi service!
+                    </div>
                 </div>
                 <div class="hr">
                     <hr>
@@ -112,8 +113,9 @@
                         <img src="../../src/images/pic2.jpg" alt="Forest" width="600" height="400">
                     </a>
                     <p>JUICE AND <span>BITES</span></p>
-                    <div class="desc">Add a description of the image hereAdd a description of the image here, Add a
-                        description of the image here</div>
+                    <div class="desc">Relax and recharge with our Juice and Bites menu. As you're pampered with our hair, makeup, or nail services, enjoy a delicious selection of healthy juices and snacks. 
+                        Book your appointment today and enjoy the perfect pick-me-up during your visit!
+                    </div>
                 </div>
                 <div class="hr">
                     <hr>
@@ -122,9 +124,10 @@
                     <a target="_blank" href="../../src/images/pic3.jpg">
                         <img src="../../src/images/pic3.jpg" alt="Northern Lights" width="600" height="400">
                     </a>
-                    <p><span>DISCOUNT</span> ON SERVICES</p>
-                    <div class="desc">Add a description of the image here, Add a description of the image hereAdd a
-                        description of the image here</div>
+                    <p><span>DISCOUNT</span> AND SERVICE <span>DELIVERY</span></p>
+                    <div class="desc">We offer discount to our customers depending on some conditions such 
+                        Directing new customers to our saloon, also Amount of service purchased by customer. We offer  free delivery services to our customers on thier locations.
+                    </div>
                 </div>
                 <div class="hr">
                     <hr>
@@ -136,13 +139,13 @@
 
     <div class="footer">
         <div class="socialicons">
-            <a href="#" class="fa fa-instagram"></a>
-            <a href="#" class="fa fa-facebook"></a>
-            <a href="#" class="fa fa-telegram"></a>
-            <a href="#" class="fa fa-twitter"></a>
-            <a href="#" class="fa fa-whatsapp"></a>
+            <a href="https://instagram.com/zuxmoney_beauty_parlor?igshid=NDk5N2NlZjQ=" class="fa fa-instagram"></a>
+            <a href="#" class="fa fa-facebook" target="_blank"></a>
+            <a href="#" class="fa fa-telegram" target="_blank"></a>
+            <a href="#" class="fa fa-twitter" target="_blank"></a>
+            <a href="#" class="fa fa-whatsapp" target="_blank"></a>
             <div class="tik">
-                <a href="#"><img src="../../src/images/tkicon4.png" alt="tiktok"></a>
+                <a href="https://www.tiktok.com/@zuxmoney_beauty_parlor?_t=8Zi3K9t6EHF&_r=1" target="_blank"><img src="../../src/images/tkicon4.png" alt="tiktok" ></a>
             </div>
 
         </div>
@@ -164,7 +167,7 @@
 
             <div class="column3">
                 <h3>Contacts</h3>
-                <p>Phone:&nbsp; &nbsp; &nbsp;&nbsp; +255764730547<br>Email:&nbsp; &nbsp; &nbsp;&nbsp; zux@gmail.com
+                <p>Phone:&nbsp; &nbsp; &nbsp;&nbsp; +255752103394<br>Email:&nbsp; &nbsp; &nbsp;&nbsp; zux@gmail.com
                 </p>
             </div>
         </div>
