--- a/view/servicepage/service.html
+++ b/view/servicepage/service.html
@@ -15,25 +15,25 @@
     <div class="backimage">
         <div class="topnav">
             <div class="logo">
-                <img src="../../src/images/logo5.png" alt="Logo" width="270px" >
+                <img src="../../src/images/logo5.png" alt="Logo" width="270px">
             </div>
             <div class="subtop">
                 <ul>
                     <li><a href="../gallerypage/gallerypage.html">GALLERY</a></li>
-                    <li  class="active"><a href="../servicepage/service.html">SERVICES</a></li>
+                    <li class="active"><a href="../servicepage/service.html">SERVICES</a></li>
                     <li><a href="../contacts/contacts.html">CONTACTS</a></li>
                     <li><a href="../about/about.html">ABOUT</a></li>
                     <li><a href="../homepage/home.html">HOME</a></li>
                 </ul>
             </div>
-            
+
         </div>
     </div>
     <div class="hidden">
         <div class="services">
             <div class="head">
                 <p>
-                    <span>Hair </span>Dressing 
+                    <span>Hair </span>Dressing
                 </p>
             </div>
 
@@ -43,9 +43,9 @@
                     <a target="_blank" href="../../src/images/pic4.jpg">
                         <img src="../../src/images/pic4.jpg" alt="Cinque Terre" width="600" height="400">
                     </a>
-                    <p>HAIR <span>DRESSING</span></p>
-                    <div class="desc">Add a description of the image here, Add a description of the image hereAdd a
-                        description of the image here</div>
+                    <p>Butter<span>fly</span></p>
+                    <!-- <div class="desc">Add a description of the image here, Add a description of the image hereAdd a
+                        description of the image here</div> -->
                 </div>
 
                 <div class="hr">
@@ -57,9 +57,9 @@
                     <a target="_blank" href="../../src/images/pic2.jpg">
                         <img src="../../src/images/pic2.jpg" alt="Forest" width="600" height="400">
                     </a>
-                    <p>MAKE<span>UP</span></p>
-                    <div class="desc">Add a description of the image hereAdd a description of the image here, Add a
-                        description of the image here</div>
+                    <p>Notr<span>ess</span></p>
+                    <!-- <div class="desc">Add a description of the image hereAdd a description of the image here, Add a
+                        description of the image here</div> -->
                 </div>
 
                 <div class="hr">
@@ -70,9 +70,60 @@
                     <a target="_blank" href="../../src/images/pic3.jpg">
                         <img src="../../src/images/pic3.jpg" alt="Northern Lights" width="600" height="400">
                     </a>
-                    <p><span>DISCOUNT</span> ON SERVICES</p>
-                    <div class="desc">Add a description of the image here, Add a description of the image hereAdd a
-                        description of the image here</div>
+                    <p><span>Twi</span>st</p>
+                    <!-- <div class="desc">Add a description of the image here, Add a description of the image hereAdd a
+                        description of the image here</div> -->
+                </div>
+                <div class="hr">
+                    <hr>
+                </div>
+
+            </div>
+            <div class="servicesgallery">
+
+                <div class="servigallery1 ">
+                    <a target="_blank" href="../../src/images/pic4.jpg">
+                        <img src="../../src/images/pic4.jpg" alt="Cinque Terre" width="600" height="400">
+                    </a>
+                    <p>Exte<span>nsion</span></p>
+                    <!-- <div class="desc">Add a description of the image here, Add a description of the image hereAdd a
+                        description of the image here</div> -->
+                </div>
+
+                <div class="hr">
+                    <hr>
+                </div>
+
+
+                <div class="servigallery2 ">
+                    <a target="_blank" href="../../src/images/pic2.jpg">
+                        <img src="../../src/images/pic2.jpg" alt="Forest" width="600" height="400">
+                    </a>
+                    <p>Ye<span>bo</span></p>
+                    <!-- <div class="desc">Add a description of the image hereAdd a description of the image here, Add a
+                        description of the image here</div> -->
+                </div>
+
+                <div class="hr">
+                    <hr>
+                </div>
+
+                <div class="servigallery3 ">
+
+                    <!-- <a target="_blank" href="../../src/images/pic3.jpg"> -->
+                    <!-- <img src="../../src/images/pic3.jpg" alt="Northern Lights" width="600" height="400"> -->
+                    <!-- </a> -->
+                    <p><span>Other </span> styles</p>
+                    <div class="desc">
+                        <ul>
+                            <li>selfie</li>
+                            <li>Jumong style</li>
+                            <li>Bob</li>
+                            <li>Mkia wa farasi</li>
+                            <li>passion twist</li>
+                            <li>Kubana nywele</li>
+                        </ul>
+                    </div>
                 </div>
                 <div class="hr">
                     <hr>
@@ -94,32 +145,40 @@
                     <a target="_blank" href="../../src/images/pic4.jpg">
                         <img src="../../src/images/pic4.jpg" alt="Cinque Terre" width="600" height="400">
                     </a>
-                    <p>FREE <span>Wi-Fi</span></p>
-                    <div class="desc">Add a description of the image here, Add a description of the image hereAdd a
-                        description of the image here</div>
+                    <p>Bridal<span> makeup</span></p>
+                    <!-- <div class="desc">Add a description of the image here, Add a description of the image hereAdd a
+                        description of the image here</div> -->
                 </div>
 
                 <div class="hr">
                     <hr>
-                </div>               
+                </div>
                 <div class="offgallery2">
                     <a target="_blank" href="../../src/images/pic2.jpg">
                         <img src="../../src/images/pic2.jpg" alt="Forest" width="600" height="400">
                     </a>
-                    <p>JUICE AND <span>BITES</span></p>
-                    <div class="desc">Add a description of the image hereAdd a description of the image here, Add a
-                        description of the image here</div>
+                    <p>Simple<span>Makeup</span></p>
+                    <!-- <div class="desc">Add a description of the image hereAdd a description of the image here, Add a
+                        description of the image here</div> -->
                 </div>
                 <div class="hr">
                     <hr>
                 </div>
                 <div class="offgallery3">
-                    <a target="_blank" href="../../src/images/pic3.jpg">
+                    <!-- <a target="_blank" href="../../src/images/pic3.jpg">
                         <img src="../../src/images/pic3.jpg" alt="Northern Lights" width="600" height="400">
-                    </a>
-                    <p><span>DISCOUNT</span> ON SERVICES</p>
-                    <div class="desc">Add a description of the image here, Add a description of the image hereAdd a
-                        description of the image here</div>
+                    </a> -->
+                    <p><span>Other </span>Make up styles</p>
+                    <div class="desc">
+                        <ul>
+                            <li>Brow or Lash Tint</li>
+                            <li>Lash Strip</li>
+                            <li>Bob</li>
+                            <li>Graduation makeup</li>
+                            <li>Birthdays</li>
+                            <li>Sendoffs</li>
+                        </ul>
+                    </div>
                 </div>
                 <div class="hr">
                     <hr>
@@ -140,9 +199,9 @@
                     <a target="_blank" href="../../src/images/pic4.jpg">
                         <img src="../../src/images/pic4.jpg" alt="Cinque Terre" width="600" height="400">
                     </a>
-                    <p>FREE <span>Wi-Fi</span></p>
-                    <div class="desc">Add a description of the image here, Add a description of the image hereAdd a
-                        description of the image here</div>
+                    <p>Ped<span>cure</span></p>
+                    <!-- <div class="desc">Add a description of the image here, Add a description of the image hereAdd a
+                        description of the image here</div> -->
                 </div>
                 <div class="hr">
                     <hr>
@@ -151,20 +210,28 @@
                     <a target="_blank" href="../../src/images/pic2.jpg">
                         <img src="../../src/images/pic2.jpg" alt="Forest" width="600" height="400">
                     </a>
-                    <p>JUICE AND <span>BITES</span></p>
-                    <div class="desc">Add a description of the image hereAdd a description of the image here, Add a
-                        description of the image here</div>
+                    <p>Ti<span>ps</span></p>
+                    <!-- <div class="desc">Add a description of the image hereAdd a description of the image here, Add a
+                        description of the image here</div> -->
                 </div>
                 <div class="hr">
                     <hr>
                 </div>
                 <div class="nailgallery3">
-                    <a target="_blank" href="../../src/images/pic3.jpg">
+                    <!-- <a target="_blank" href="../../src/images/pic3.jpg">
                         <img src="../../src/images/pic3.jpg" alt="Northern Lights" width="600" height="400">
-                    </a>
-                    <p><span>DISCOUNT</span> ON SERVICES</p>
-                    <div class="desc">Add a description of the image here, Add a description of the image hereAdd a
-                        description of the image here</div>
+                    </a> -->
+                    <p><span>Other</span> styles</p>
+                    <div class="desc">
+                        <ul>
+                            <li>Manicure</li>
+                            <li>Stickers</li>
+                            <li>Magnet style</li>
+                            <li>Building</li>
+                            <li>Normal color style</li>
+                            <li>Kucha ya unda</li>
+                        </ul>
+                    </div>
                 </div>
                 <div class="hr">
                     <hr>
@@ -175,39 +242,42 @@
     </div>
     <div class="footer">
         <div class="socialicons">
-            <a href="#" class="fa fa-instagram"></a>
-            <a href="#" class="fa fa-facebook"></a>
-            <a href="#" class="fa fa-telegram"></a>
-            <a href="#" class="fa fa-twitter"></a>
-            <a href="#" class="fa fa-whatsapp"></a>
+            <a href="https://instagram.com/zuxmoney_beauty_parlor?igshid=NDk5N2NlZjQ=" class="fa fa-instagram"></a>
+            <a href="#" class="fa fa-facebook" target="_blank"></a>
+            <a href="#" class="fa fa-telegram" target="_blank"></a>
+            <a href="#" class="fa fa-twitter" target="_blank"></a>
+            <a href="#" class="fa fa-whatsapp" target="_blank"></a>
             <div class="tik">
-                <a href="#"><img src="../../src/images/tkicon4.png" alt="tiktok"></a>
+                <a href="https://www.tiktok.com/@zuxmoney_beauty_parlor?_t=8Zi3K9t6EHF&_r=1" target="_blank"><img
+                        src="../../src/images/tkicon4.png" alt="tiktok"></a>
             </div>
+
+        </div>
+    
+
+
+
+    <div class="row">
+        <div class="column1">
+            <h3>Hours</h3>
+            <p>Mon-Fri:&nbsp; &nbsp;&nbsp;&nbsp; 8:00am-10:00pm<br>
+                Sat:&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; &nbsp; 9:00am-7:00pm<br>
+                Sun:&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; &nbsp; &nbsp;&nbsp; 12:00am-7:00pm</p>
         </div>
 
+        <div class="column2">
+            <h3>Location</h3>
+            <p>Gongo la mboto, Dar es salaam, Tanzania<br>Nyerere road, Kampala road </p>
+        </div>
 
-
-        <div class="row">
-            <div class="column1">
-                <h3>Hours</h3>
-                <p>Mon-Fri:&nbsp; &nbsp;&nbsp;&nbsp; 8:00am-10:00pm<br>
-                    Sat:&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; &nbsp; 9:00am-7:00pm<br>
-                    Sun:&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; &nbsp; &nbsp;&nbsp; 12:00am-7:00pm</p>
-            </div>
-
-            <div class="column2">
-                <h3>Location</h3>
-                <p>Gongo la mboto, Dar es salaam, Tanzania<br>Nyerere road, Kampala road </p>
-            </div>
-
-            <div class="column3">
-                <h3>Contacts</h3>
-                <p>Phone:&nbsp; &nbsp; &nbsp;&nbsp; +255764730547<br>Email:&nbsp; &nbsp; &nbsp;&nbsp; zux@gmail.com
-                <p>
-            </div>
+        <div class="column3">
+            <h3>Contacts</h3>
+            <p>Phone:&nbsp; &nbsp; &nbsp;&nbsp; +255752103394<br>Email:&nbsp; &nbsp; &nbsp;&nbsp; zux@gmail.com
+            <p>
         </div>
     </div>
-        
+    </div>
+
 </body>
 
 </html>
