--- a/view/contacts/contacts.html
+++ b/view/contacts/contacts.html
@@ -52,8 +52,9 @@
           </tr>
           <tr>
             <td>
-              Tel: +255677855543 <br>
-              Tel: +255677855543
+              Tel: +255752103394 <br>
+              Tel: +255688407966 <br>
+              Tel: +255689842027
             </td>
           </tr>
           <tr>
@@ -110,14 +111,16 @@
   </div>
   <div class="footer">
     <div class="socialicons">
-      <a href="#" class="fa fa-instagram"></a>
-      <a href="#" class="fa fa-facebook"></a>
-      <a href="#" class="fa fa-telegram"></a>
-      <a href="#" class="fa fa-twitter"></a>
-      <a href="#" class="fa fa-whatsapp"></a>
+      <a href="https://instagram.com/zuxmoney_beauty_parlor?igshid=NDk5N2NlZjQ=" class="fa fa-instagram"></a>
+      <a href="#" class="fa fa-facebook" target="_blank"></a>
+      <a href="#" class="fa fa-telegram" target="_blank"></a>
+      <a href="#" class="fa fa-twitter" target="_blank"></a>
+      <a href="#" class="fa fa-whatsapp" target="_blank"></a>
       <div class="tik">
-        <a href="#"><img src="../../src/images/tkicon4.png" alt="tiktok"></a>
-    </div>
+          <a href="https://www.tiktok.com/@zuxmoney_beauty_parlor?_t=8Zi3K9t6EHF&_r=1" target="_blank"><img src="../../src/images/tkicon4.png" alt="tiktok" ></a>
+      </div>
+
+  
     </div>
 
 
@@ -137,7 +140,7 @@
 
       <div class="column3">
         <h3>Contacts</h3>
-        <p>Phone:&nbsp; &nbsp; &nbsp;&nbsp; +255764730547<br>Email:&nbsp; &nbsp; &nbsp;&nbsp; zux@gmail.com
+        <p>Phone:&nbsp; &nbsp; &nbsp;&nbsp; +255752103394<br>Email:&nbsp; &nbsp; &nbsp;&nbsp; zux@gmail.com
         <p>
       </div>
     </div>
