--- a/view/homepage/homestyle.css
+++ b/view/homepage/homestyle.css
@@ -231,7 +231,7 @@ body {
 }
 .servicesgallery .servigallery2 img {
   width: 100%;
-  height: auto;
+  /* height: auto; */
   border-radius: 2%;
 }
 .servicesgallery .servigallery3:hover {
